syntax = "proto3";
package waves;

option java_package = "com.wavesplatform.protobuf.transaction";
option csharp_namespace = "Waves";
option go_package = "generated";

import "transaction.proto";
import "amount.proto";

message InvokeScriptResult {
    message Payment {
        bytes address = 1;
        Amount amount = 2;
    }

    message Issue {
        bytes asset_id = 1;
        string name = 2;
        string description = 3;
        int64 amount = 4;
        int32 decimals = 5;
        bool reissuable = 6;
        bytes script = 7;
        int64 nonce = 8;
    }

    message Reissue {
        bytes asset_id = 1;
        int64 amount = 2;
        bool is_reissuable = 3;
    }

    message Burn {
        bytes asset_id = 1;
        int64 amount = 2;
    }

    repeated DataTransactionData.DataEntry data = 1;
    repeated Payment transfers = 2;
    repeated Issue issues = 3;
    repeated Reissue reissues = 4;
    repeated Burn burns = 5;
}
